--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
   <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
-  
+ <nav>
+   <ul class="nav-list">
+     <li class="nav-list-item">
+       <a href="#" class="nav-list-link">Home</a></li>
+     <li class="nav-list-item">
+       <a href="#" class="nav-list-link">Categories</a></li>
+     <li class="nav-list-item">
+       <a href="#" class="nav-list-link">About</a></li>
+     <li class="nav-list-item">
+       <a href="#" class="nav-list-link">Contacts</a></li>
+   </ul>
+ </nav>
+ <section>
+   <h1>title section</h1>
+   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis pariatur tempora ullam accusantium odit non hic ratione, quo repellendus corrupti esse nesciunt sequi dolores quis consequatur aperiam illum consectetur molestias! Ut minus nisi eos ducimus quos atque nesciunt numquam tempore.</p>
+   <p>Corrupti delectus perferendis doloremque officia modi beatae ut, iure tempora sit debitis et impedit consequuntur itaque totam adipisci quasi iste, ea iusto asperiores molestias numquam vel! Quisquam quidem sint omnis expedita, molestias hic. Expedita ex illum laborum magnam minus cupiditate!</p>
+   <p>Facere, et, porro vitae dolorum repellat aut nemo dolorem recusandae, impedit culpa corporis. Exercitationem sequi omnis id recusandae ullam error molestias quidem quae illum placeat facere dolore, natus harum corporis autem rerum magni aperiam impedit sint animi quasi veritatis dicta!</p>
+ </section>
 </body>
 </html>
