--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
      <li class="nav-list-item">
        <a href="#" class="nav-list-link">Home</a></li>
      <li class="nav-list-item">
-       <a href="#" class="nav-list-link">Categories</a></li>
+       <a href="#" class="nav-list-link">Categories</a>
+      <ul class="sub-nav-list">
+        <li class="nav-list-item sub-nav-list-item">
+          <a href="" class="nav-list-link">Men</a></li>
+        <li class="nav-list-item sub-nav-list-item">
+          <a href="" class="nav-list-link">Women</a></li>
+        <li class="nav-list-item sub-nav-list-item">
+          <a href="" class="nav-list-link">Child</a></li>
+      </ul></li>
      <li class="nav-list-item">
        <a href="#" class="nav-list-link">About</a></li>
      <li class="nav-list-item">
