--- a/index.html
+++ b/index.html
@@ -15,7 +15,21 @@
        <a href="#" class="nav-list-link">Categories</a>
       <ul class="sub-nav-list">
         <li class="nav-list-item sub-nav-list-item">
+          <a href="" class="nav-list-link">Men</a><ul class="sub-nav-list">
+        <li class="nav-list-item sub-nav-list-item">
           <a href="" class="nav-list-link">Men</a></li>
+        <li class="nav-list-item sub-nav-list-item">
+          <a href="" class="nav-list-link">Women</a><ul class="sub-nav-list">
+            <li class="nav-list-item sub-nav-list-item">
+              <a href="" class="nav-list-link">Men</a></li>
+            <li class="nav-list-item sub-nav-list-item">
+              <a href="" class="nav-list-link">Women</a></li>
+            <li class="nav-list-item sub-nav-list-item">
+              <a href="" class="nav-list-link">Child</a></li>
+          </ul></li>
+        <li class="nav-list-item sub-nav-list-item">
+          <a href="" class="nav-list-link">Child</a></li>
+      </ul></li>
         <li class="nav-list-item sub-nav-list-item">
           <a href="" class="nav-list-link">Women</a></li>
         <li class="nav-list-item sub-nav-list-item">
